onBackPress is implemented and minor refactoring and test cases are included.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CakeCollections</string>
     <string name="welcome">Welcome</string>
+    <string name="main_error_connection">network failure : inform the user and possibly retry</string>
 </resources>
